Don't show the settings as they don't do anything yet

--- a/Info.plist
+++ b/Info.plist
@@ -35,7 +35,7 @@
       <string>com.culturedcode.ThingsTouch</string>
     </array>
     <key>LIShowPreferences</key>
-    <true/>
+    <false/>
     <key>LISortable</key>
     <true/>
   </dict>
