--- a/Info.plist
+++ b/Info.plist
@@ -35,7 +35,7 @@
       <string>com.culturedcode.ThingsTouch</string>
     </array>
     <key>LIShowPreferences</key>
-    <false/>
+    <true />
     <key>LISortable</key>
     <true/>
   </dict>
