--- a/Preferences.plist
+++ b/Preferences.plist
@@ -18,36 +18,14 @@
 	  </dict>
 	  <dict>
 		<key>cell</key>
-		<string>PSLinkListCell</string>
+		<string>PSEditTextCell</string>
 		<key>default</key>
 		<integer>3</integer>
 		<key>defaults</key>
 		<string>cx.ath.the-kenny.ThingsPlugin</string>
-		<key>detail</key>
-		<string>PSListItemsController</string>
 		<key>key</key>
 		<string>Limit</string>
-		<key>label</key>
-		<string>Limit</string>
-		<key>validTitles</key>
-		<array>
-		  <string>1</string>
-		  <string>2</string>
-		  <string>3</string>
-		  <string>5</string>
-		  <string>10</string>
-		</array>
-		<key>validValues</key>
-		<array>
-		  <integer>1</integer>
-		  <integer>2</integer>
-		  <integer>3</integer>
-		  <integer>5</integer>
-		  <integer>10</integer>
-		</array>
 	  </dict>
 	</array>
-	<key>title</key>
-	<string>Calendar</string>
   </dict>
 </plist>
