--- a/Preferences.plist
+++ b/Preferences.plist
@@ -42,7 +42,7 @@
 		<key>cell</key>
 		<string>PSLinkListCell</string>
 		<key>default</key>
-		<string>Today</string>
+		<string>today</string>
 		<key>defaults</key>
 		<string>cx.ath.the-kenny.ThingsPlugin</string>
 		<key>detail</key>
